<resources>
    <string name="app_name">Mind Plateau</string>
    <string name="app_name1">Mind</string>
    <string name="play_button">Play</string>
    <string name="games">Games</string>
    <string name="Back">Back</string>
    <string name="Difficulty">Difficulty</string>
    <string name="HowToPlay">How To Play?</string>
    <string name="Easy">Easy</string>
    <string name="Medium">Medium</string>
    <string name="Hard">Hard</string>
    <string name="VeryEasy">Very Easy</string>
    <string name="VeryHard">Very Hard</string>
    <string name="Undo">Undo</string>
    <string name="Delete">Delete</string>
    <string name="ResetUnderlined"><u>Reset</u></string>
    <string name="ResetNormal">Reset</string>
    <string name="do_you_want_to_leave">Do you want to leave?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="loading">Loading...</string>
    <string name="Correct">Correct</string>
    <string name="Next">Next</string>
    <string name="GameMenu">Menu</string>
    <string name="Size">Size</string>
    <string name="SignIn">Sign In</string>
    <string name="SignUp">Sign Up</string>
    <string name="Username">Username</string>
    <string name="Password">Password</string>
    <string name="HaveAccount">Already have an account?</string>
    <string name="DontHaveAccount">Don\'t have an account yet?</string>
    <string name="PleaseWait">Please Wait...</string>
    <string name="Submit">Submit</string>
    <string name="Nickname">Nickname</string>
    <string name="Email">E-mail</string>
    <string name="NameandSurname">Name and Surname</string>
    <string name="Info">Info</string>
    <string name="Stats">Statistics</string>
    <string name="avgTime">Avg. Time</string>
    <string name="numques">Num. Ques.</string>
    <string name="score">Score</string>
    <string name="ConfirmationCode">Confirmation Code</string>
    <string name="Send">Send</string>
    <string name="Wrong">Wrong</string>
    <string name="Login">Log in</string>
    <string name="Rank">Rank</string>
    <string name="You">You</string>
    <string name="Unknown">Unknown</string>
    <string name="Leaderboard">Leaderboard</string>
    <string name="Comingsoon">Coming soon...</string>
    <string name="Besttime"><u>Best</u></string>
    <string name="Teacher"><u>Instructor</u></string>
    <string name="Students"><u>Students</u></string>
    <string name="SignUpAsStudent">Sign Up As A Student</string>
    <string name="SignUpAsInstructer">Sign Up As  An Instructor</string>
    <string name="Join">Join</string>
    <string name="CouldntFind">Couldn\'t find the class.</string>
    <string name="letters">letters</string>
    <string name="Code">Code</string>
    <string name="ClassCode">Class Code</string>
    <string name="Tasks">Tasks</string>
    <string name="Members">Members</string>
    <string name="Everyone">All Students</string>
    <string name="leaveClass">Leave Class</string>
    <string name="dywt_leave_class">Do you want to leave this class?</string>
    <string name="Start">Start</string>
    <string name="Instructor_Hasnt_started">Instructor hasn\'t started the session yet.</string>
    <string name="Ins">(Ins)</string>
    <string name="permissionGranted">Permission to make changes on the grid is granted.</string>
    <string name="permissionRemoved">Permission to make changes on the grid is removed</string>
    <string name="singlePlayer">Single Player</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="tournament">Tournament</string>
    <string name="WaitingForOpponents">Waiting For Opponents...</string>
    <string name="GameMode">Game Mode</string>
    <string name="Opponents">Opponents</string>
    <string name="Results">Results</string>
    <string name="QuestionShortQ">Q</string>
    <string name="Create">Create Tournament</string>
    <string name="Participants">Participants</string>
    <string name="StartTournament">Start The Tournament</string>
    <string name="Activities">Activities</string>
    <string name="CollectiveSolving">Collective Solving</string>
    <string name="TournamentHasntStartedYet">Tournament hasn\'t started yet.</string>
    <string name="InvalidCode">Invalid Code</string>
    <string name="msg_no_network_connection">No network connection, please check the network settings</string>
    <string name="WaitingInsNextQ">Waiting for the instructor to move on to the next question.</string>
    <string name="app_name2">Plateau</string>
    <string name="htp_sudoku">Sudoku is played on a grid of 6x6 or 9x9 spaces. Each row, column and square needs to be filled out with the numbers 1-6 or 1-9, without repeating any numbers within the row, column or square. While solving a Sudoku question, by looking at the numbers in the same rows, columns and squares, the numbers that cannot be found in the spaces are determined and the possibilities are reduced. For example, if 8 out of 9 numbers cannot be placed in a space, the remaining 1 number can be placed precisely.</string>
    <string name="htp_hazineavi">In Mine Sweeper game, the numbers given show how many diamonds their neighbors have. While solving a Mine Sweeper question, the first thing to look for is clues that have as many neighbors as the number written in them. Clues that have as many neighbors as the number written in them may not be found in every question or may be insufficient to reach a solution. What needs to be looked for in these cases is the common effects of the diamonds which will be placed on the neighbors of the clues, on the other clues.</string>
    <string name="htp_patika">The aim of the Loop game is to draw a path that will fill all empty boxes, will not cross over itself, pass through each box once and form a single closed shape when completed. When solving the Loop question, first of all, corners are found. If 2 of the 4 neighbors (horizontal and vertical neighbors) of any square are closed, a path is drawn to its other two neighbors. This process is continued until no more corners can be drawn. In addition, another method that should be used is to utilize the single-closed-path rule. For example, if there are 2 directions for the path to go in a box and a small closed shape is formed when continuing from one of them, the other path should be taken.</string>
    <string name="htp_sayibulmaca">In the Number Puzzle game, the numbers on the right show how many of the numbers in that row are included in the answer. Numbers with a \'+\' sign next to them indicate that the numbers in that row are in the same column in the answer. Those with a \'-\' sign next to them indicate that the numbers in that row are in a different column in the answer. For example, in a line that says \'+1 -2\' on the right side, it can be deduced that 3 of the numbers are in the answer and 1 of them is in the correct place and 2 of them are in the wrong place.</string>
    <string name="htp_sozcukturu">The aim of the Word Tour game is to find words in the table according to the number of letters given. In this game; it is necessary to draw a path starting from the word with the fewest letters and moving between the boxes horizontally, vertically or diagonally and ending at the last letter of the word with the most letters. In addition, each box should be used only once and no empty boxes should be left.</string>
    <string name="htp_piramit">In the Pyramid game, the numbers in the boxes must be the sum or difference of the numbers in the 2 boxes below them. In addition, the same number cannot be placed more than once in a row and consecutive numbers cannot be placed in adjacent boxes. All empty boxes must be filled in accordance with these rules.</string>
    <string name="WaitingForScores">Waiting For Scores...</string>
    <string name="feature_not_active">This feature is not active.</string>
    <string name="HazineAvı">Mine Sweeper</string>
    <string name="Patika">Loop</string>
    <string name="SayıBulmaca">Number Puzzle</string>
    <string name="SözcükTuru">Word Tour</string>
    <string name="Piramit">Pyramid</string>
    <string name="hazineAvi_instrings1">Welcome to Mine Sweeper Tutorial. You can take part in the solving process by tapping the blinking boxes throughout the tutorial.</string>
    <string name="hazineAvi_instrings2">"In Mine Sweeper, number clues show how many of their neighbours have diamonds. "</string>
    <string name="hazineAvi_instrings3">The first thing to look for when solving is the clues that have as many neighbors as the number written in them.</string>
    <string name="hazineAvi_instrings4">As seen in the example, clues with 4 written in it have only 4 neighbors. These neighbors can definitely be filled with diamonds</string>
    <string name="hazineAvi_instrings5">As you can notice, 2 of the 4 diamonds we have placed are the neighbors of the clue with the number 2 in it.</string>
    <string name="hazineAvi_instrings6">So the clue with 2 in it has got all the diamonds it should have and its other neighbors cannot have diamonds. Crosses are placed on these neighbors by switching to the cross by pressing switch box.</string>
    <string name="hazineAvi_instrings7">Clues that have as many neighbors as the number written in them may not be found in every question or may be insufficient to reach a solution.</string>
    <string name="hazineAvi_instrings8">What needs to be looked at in these cases is the common effects of diamonds placed on the neighbors of the clues on the other clues.</string>
    <string name="hazineAvi_instrings9">For example these 2 clues have 3 neighbors and 2 of these 3 boxes must be diamonds.</string>
    <string name="hazineAvi_instrings10">As you can see, these 3 boxes are also neighbors of the clue with 2 in it. So the 2 diamonds in these 3 boxes affect it as well.</string>
    <string name="hazineAvi_instrings11">Since there will definitely be 2 diamonds in these 3 gray-coloured neighbors, the other neighbors cannot have diamonds. Crosses should be placed in these neighbors.</string>
    <string name="hazineAvi_instrings12">The clue with 1 in it on the right has only one empty neighbor left. A diamond is put to the last empty neighbor by switching to the diamond from the switch box.</string>
    <string name="hazineAvi_instrings13">One of the neighbors of the clue marked in green has a diamond. So one of the remaining 2 neighbors has to have a diamond.</string>
    <string name="hazineAvi_instrings14">The clue marked in green and containing 1 must also have a diamond in one of its 2 neighbors.</string>
    <string name="hazineAvi_instrings15">So there are 2 diamonds in total in these 4 boxes.</string>
    <string name="hazineAvi_instrings16">The 2 diamonds in these 4 boxes also affect the clue marked in green. Therefore, a cross should be placed to the remaining neighbor of the clue with 2 in it.</string>
    <string name="hazineAvi_instrings17">The clue marked in green with a 1 in it has only one neighbor left. This neighbor should also receive a diamond.</string>
    <string name="hazineAvi_instrings18">The clue marked in green with a 3 in it has a diamond in one of its neighbors. The remaining 2 neighbors should also receive diamonds.</string>
    <string name="hazineAvi_instrings19">You have come to the end of this tutorial.🏁 You can exit with the help of the back button at the top left or return to the previous steps with the arrow keys.</string>
    <string name="ChooseStudent">Choose A Student</string>
    <string name="ChooseGame">Choose A Game :</string>
    <string name="ChooseDifficulty">Choose A Difficulty :</string>
    <string name="EnterNumberOfPuzzles">Enter Number Of Puzzles :</string>
    <string name="General">General</string>
    <string name="LogOut">Log Out</string>
    <string name="wannaLogOut">Do you want to log out of your account?</string>
    <string name="hands_on_tutorial">Hands-on\nTutorial</string>
</resources>