<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp"
        android:background="@color/f7f5fa"
        android:layout_gravity="center"
        android:gravity="center">

        <EditText
            android:id="@+id/confirmCodeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/light_red_rounded_bg"
            android:ems="10"
            android:fontFamily="@font/mohave_bold"
            android:hint="@string/ConfirmationCode"
            android:inputType="textFilter|number"
            android:padding="20dp"
            android:textColor="#000000"
            android:textSize="25sp"
            android:autofillHints="@string/Username"/>


        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:padding="10dp"
            android:id="@+id/confirmDialogSend"
            android:textColor="@color/f7f5fa"
            android:background="@drawable/nums_gl_bg"
            android:layout_marginTop="20dp"
            android:textAllCaps="false"
            android:textSize="24sp"
            android:fontFamily="@font/mohave_bold"
            android:text="@string/Send"/>


    </LinearLayout>
