<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/f7f5fa"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:padding="30dp"
        android:id="@+id/usernameLinearLayout"
        android:visibility="visible"
        android:background="@color/transparent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/signTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/SignUp"
            android:textSize="40sp"
            android:textColor="@color/near_black_blue"
            android:fontFamily="@font/mohave_bold"/>

        <EditText
            android:id="@+id/displaynameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/light_red_rounded_bg"
            android:ems="10"
            android:fontFamily="@font/mohave_bold"
            android:hint="@string/NameandSurname"
            android:inputType="textFilter|textPersonName"
            android:padding="15dp"
            android:textColor="#000000"
            android:textSize="18sp"
            android:autofillHints="@string/Username"/>

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="30dp"
            android:background="@drawable/light_red_rounded_bg"
            android:inputType="textFilter"
            android:textColor="#000000"
            android:textSize="18sp"
            android:fontFamily="@font/mohave_bold"
            android:hint="@string/Username"
            android:padding="15dp"/>

        <EditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="30dp"
            android:background="@drawable/light_red_rounded_bg"
            android:inputType="textFilter"
            android:textColor="#000000"
            android:textSize="18sp"
            android:fontFamily="@font/mohave_bold"
            android:hint="@string/Email"
            android:autofillHints="@string/Username"
            android:padding="15dp"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:fontFamily="@font/mohave_bold"
            android:layout_marginTop="30dp"
            android:background="@drawable/light_red_rounded_bg"
            android:inputType="textPassword"
            android:textColor="#000000"
            android:textSize="18sp"
            android:hint="@string/Password"
            android:padding="15dp" />

        <TextView
            android:id="@+id/signInChangeButton"
            android:layout_width="wrap_content"
            android:layout_gravity="center|end"
            android:layout_marginTop="5dp"
            android:fontFamily="@font/mohave_bold"
            android:layout_marginRight="10dp"
            android:layout_marginEnd="10dp"
            android:layout_height="wrap_content"
            android:background="@color/transparent"
            android:textColor="@color/reset_selector_tvcolor"
            android:clickable="true"
            android:focusable="true"
            android:textAllCaps="false"
            android:padding="5dp"
            android:textSize="16sp"
            android:text="@string/HaveAccount" />


        <Button
            android:id="@+id/usernameJoinButton"
            android:layout_width="wrap_content"
            android:layout_marginBottom="40dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mohave_bold"
            android:background="@drawable/clicked_diff_bg"
            android:textColor="#ffffff"
            android:onClick="signClicked"
            android:textAllCaps="false"
            android:padding="10dp"
            android:textSize="18sp"
            android:text="@string/SignUp" />


        <com.google.android.gms.common.internal.SignInButtonImpl
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/common_google_signin_btn_text_light"
            android:text="Log in"
            android:textAllCaps="false"
            android:textColor="@color/near_black_blue"
            tools:text="Log in" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>