<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content" android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="30dp"
        android:background="@color/f7f5fa"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/do_you_want_to_leave"
            android:id="@+id/leaveDialogText"
            android:layout_gravity="center"
            android:gravity="center"
            android:lines="2"
            android:maxLines="2"
            android:textColor="@color/near_black_blue"
            android:fontFamily="@font/mohave_bold"
            android:textSize="36sp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"            >

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/leaveDialogNo"
                android:background="@drawable/nums_gl_bg"
                android:textSize="22sp"
                android:fontFamily="@font/mohave_bold"
                android:layout_weight="1"
                android:textColor="@color/f7f5fa"
                android:padding="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="20dp"
                android:textAllCaps="false"
                android:text="@string/no"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/leaveDialogYes"
                android:textColor="@color/f7f5fa"
                android:background="@drawable/nums_gl_bg"
                android:backgroundTint="@color/light_red"
                android:layout_marginTop="20dp"
                android:textAllCaps="false"
                android:textSize="22sp"
                android:fontFamily="@font/mohave_bold"
                android:text="@string/yes"/>



        </LinearLayout>

    </LinearLayout>

</RelativeLayout>