<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/infoCL_Profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="0.2"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/nameAndSurnameLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="15dp"
        android:padding="20dp"
        android:gravity="center"
        android:background="@drawable/rounded_f7f5fa_bg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/nameAndSurnameTV1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/NameandSurname"
            android:textColor="@color/near_black_blue"
            android:fontFamily="@font/mohave_bold"
            android:textSize="30sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@color/near_black_blue"/>

        <TextView
            android:id="@+id/nameAndSurnameTV2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Unknown"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/near_black_blue"
            android:fontFamily="@font/mohave_medium"
            android:textSize="22sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/usernameLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/rounded_f7f5fa_bg"
        app:layout_constraintTop_toBottomOf="@id/nameAndSurnameLL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/usernameTV1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/Username"
            android:textColor="@color/near_black_blue"
            android:fontFamily="@font/mohave_bold"
            android:textSize="30sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@color/near_black_blue"/>

        <TextView
            android:id="@+id/usernameTV2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Unknown"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/near_black_blue"
            android:fontFamily="@font/mohave_medium"
            android:textSize="22sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/emailLL"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:padding="20dp"
        android:gravity="center"
        android:background="@drawable/rounded_f7f5fa_bg"
        app:layout_constraintTop_toBottomOf="@id/usernameLL"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/emailTV1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/Email"
            android:textColor="@color/near_black_blue"
            android:fontFamily="@font/mohave_bold"
            android:textSize="30sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:background="@color/near_black_blue"/>

        <TextView
            android:id="@+id/emailTV2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Unknown"
            android:maxLines="1"
            android:layout_marginTop="15dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/near_black_blue"
            android:fontFamily="@font/mohave_medium"
            android:textSize="22sp" />


    </LinearLayout>

    <Button
        android:id="@+id/leaveClassButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/clicked_diff_bg"
        android:fontFamily="@font/mohave_bold"
        android:onClick="logOut"
        android:padding="5dp"
        android:layout_marginTop="15dp"
        android:text="@string/LogOut"
        android:textAllCaps="false"
        android:textColor="@color/f7f5fa"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@+id/emailLL" />

</androidx.constraintlayout.widget.ConstraintLayout>
