<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:background="@drawable/rounded_f7f5fa_bg">


    <LinearLayout
        android:id="@+id/closebutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="3dp"
        android:onClick="wannaLeaveDialog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintVertical_bias="0">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:src="@drawable/ic_arrowbutton"
            app:tint="@color/light_red" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/mohave_bold"
            android:padding="10dp"
            android:text="@string/Back"
            android:textColor="@color/light_red"
            android:textSize="22sp" />


    </LinearLayout>


    <TextView
        android:id="@+id/oyunSecmeTV"
        android:layout_width="125dp"
        android:layout_height="27dp"
        android:fontFamily="@font/mohave_medium"
        android:text="@string/ChooseGame"
        android:textColor="@color/near_black_blue"
        app:autoSizeMaxTextSize="20sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.118"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/closebutton"
        app:layout_constraintVertical_bias="0.05" />

    <Spinner
        android:id="@+id/gameSpinner"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:background="@drawable/less_rounded_light_bluegreen_bg"
        android:backgroundTint="@color/light_blue_green"
        app:layout_constraintBottom_toBottomOf="@+id/oyunSecmeTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/oyunSecmeTV"
        app:layout_constraintTop_toTopOf="@+id/oyunSecmeTV"
        app:layout_constraintHorizontal_bias="1"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        tools:targetApi="lollipop"/>

    <TextView
        android:id="@+id/diffSecmeTV"
        android:layout_width="165dp"
        android:layout_height="27dp"
        android:fontFamily="@font/mohave_medium"
        android:text="@string/ChooseDifficulty"
        android:textColor="@color/near_black_blue"
        app:autoSizeMaxTextSize="20sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/oyunSecmeTV"
        app:layout_constraintTop_toBottomOf="@+id/gameSpinner"
        app:layout_constraintVertical_bias="0.126" />

    <Spinner
        android:id="@+id/diffSpinner"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:background="@drawable/less_rounded_light_bluegreen_bg"
        android:backgroundTint="@color/light_blue_green"
        app:layout_constraintBottom_toBottomOf="@+id/diffSecmeTV"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/diffSecmeTV"
        app:layout_constraintTop_toTopOf="@+id/diffSecmeTV"
        app:layout_constraintHorizontal_bias="1"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/startbutton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_light_red_bg"
        android:text="@string/Start"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:padding="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/diffSecmeTV"
        app:layout_constraintVertical_bias="0.137" />


</androidx.constraintlayout.widget.ConstraintLayout>